fixed horizontal scroll

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,12 @@
 * {
-    margin: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  overflow-x: hidden;
+  width: 100%;
 }
 
 .fontFira {
